--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/YunYouJun/air-conditioner"
+    "url": "/"
   },
   "homepage": "https://ac.yunyoujun.cn/",
   "dependencies": {
